add createPost resource
